[package]
name = "maptiler-cloud"
version = "0.3.0"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
description = "A simple Rust wrapper library around the Maptiler Cloud API"
license = "MIT"
edition = "2018"
repository = "https://github.com/newcomb-luke/maptiler-cloud"

[dependencies]
reqwest = "0.11"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.12", features = ["full"] }
